Fix input bleeding out of container

--- a/src/components/NumberPad/NumberPad.scss
+++ b/src/components/NumberPad/NumberPad.scss
@@ -13,34 +13,57 @@ button:focus {
 input {
   width: 100%;
   height: 30px;
+  padding: 0;
+  margin: 0;
+  border: none;
+  background-color: grey;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
 }
 
 h4 {
   margin: 0;
   padding: 0;
 }
-.header-row {
-  display: flex;
-  justify-content: space-between;
-  .close-btn {
-    height: 30px;
-    width: 30px;
-  }
-}
-.row {
-  display: flex;
+.number-pad-container {
   width: 100%;
-}
-.number-btn {
-  color: yellow;
-  background-color: black;
-  width: 33%;
-  height: 40px;
-}
 
-.clear-btn {
-  color: yellow;
-  background-color: black;
-  width: 33%;
-  height: 40px;
+  .header-row {
+    display: flex;
+    justify-content: space-between;
+    .close-btn {
+      height: 30px;
+      width: 30px;
+    }
+  }
+  .input-and-numbers {
+    width: 100%;
+    .row {
+      display: flex;
+      width: 100%;
+    }
+    .number-btn {
+      color: yellow;
+      background-color: black;
+      width: 33%;
+      height: 40px;
+    }
+
+    .clear-btn {
+      color: yellow;
+      background-color: black;
+      width: 33%;
+      height: 40px;
+    }
+  }
 }
